# amdgpu-sysfs-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: link-speed.rs
src/: error.rs  gpu_controller.rs  gpu_handle.rs  hw_mon.rs  lib.rs  sysfs.rs  tests.rs
src/error/: context.rs  mod.rs
src/gpu_handle/: error.rs  fan_control.rs  mod.rs  power_levels.rs  power_profile_mode.rs
src/gpu_handle/overdrive/: gcn.rs  gen1.rs  mod.rs  rdna.rs  vega10.rs  vega20.rs
src/gpu_handle/overdrive/snapshots/: amdgpu_sysfs__gpu_handle__overdrive__rdna__tests__parse_6700xt_full.snap  amdgpu_sysfs__gpu_handle__overdrive__rdna__tests__parse_6800_full.snap  (+36 more)
src/gpu_handle/power_profile_mode/: basic.rs  full.rs  mod.rs
src/gpu_handle/snapshots/: amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_internal_4800h.snap  amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_rx580.snap  amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_rx6900xt.snap  amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_rx7600s.snap  amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_rx7700s.snap  amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_rx7800xt.snap  amdgpu_sysfs__gpu_handle__power_profile_mode__tests__parse_full_vega56.snap
tests/: mod.rs  polaris.rs  rx580.rs  rx6900xt.rs  rx6950xt.rs  rx7800xt.rs  rx7900xt.rs  vega56.rs
tests/data/bc250/: pp_dpm_mclk  pp_dpm_sclk  pp_dpm_socclk  pp_od_clk_voltage  uevent  vbios_version
tests/data/internal-4800h/: pp_power_profile_mode
tests/data/internal-7840u/: pp_od_clk_voltage
tests/data/rx5500xt/: pp_od_clk_voltage
tests/data/rx5700xt/: pp_od_clk_voltage
tests/data/rx6700xt/: pp_od_clk_voltage
tests/data/rx6800/: pp_od_clk_voltage
tests/data/rx6900xt/: consumer:pci:0000:0c:00.1  driver  firmware_node  iommu  iommu_group  pp_od_clk_voltage
tests/data/rx6950xt/: pp_dpm_sclk
tests/data/rx7800xt/: pp_dpm_mclk  pp_od_clk_voltage  pp_power_profile_mode  pp_table  uevent  vbios_version
tests/data/rx7900xt/: pp_od_clk_voltage
tests/data/rx7900xtx/: pp_od_clk_voltage
tests/data/rx9070xt/: pp_od_clk_voltage_new
tests/data/vangogh/: pp_od_clk_voltage
tests/sysfs/: mod.rs
(+61 files in other folders)
