[package]
name = "amdgpu-sysfs"
version = "0.8.0"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/ilyazzz/amdgpu-sysfs-rs/"
description = "Library for interacting with the Linux Kernel SysFS interface for GPUs (mainly targeted at the AMDGPU driver)."

[features]
default = ["overdrive"]
overdrive = ["enum_dispatch"]

[dependencies]
enum_dispatch = { version = "0.3.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.2.1"
rust-embed = "6.4.2"
tempfile = "3.3"
