[package]
name = "amdgpu-sysfs"
version = "0.19.3"
authors = ["Ilya Zlobintsev <ilya.zl@protonmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/ilya-zlobintsev/amdgpu-sysfs-rs/"
description = "Library for interacting with the Linux Kernel SysFS interface for GPUs (mainly targeted at the AMDGPU driver)."

[features]
default = ["overdrive"]
overdrive = ["enum_dispatch"]

[dependencies]
enum_dispatch = { version = "0.3.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
rust-embed = "8.7.2"
tempfile = "3.22.0"
amdgpu-sysfs = { path = ".", features = ["serde"] }
insta = { version = "1.43.2", features = ["yaml", "redactions"] }
